3Dシューティングゲームのチュートリアル終了
https://hiromart.com/blog/publish_3dshootinggame/

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,10 @@ Assets/Plugins/Sirenix.meta
 Assets/ImportAssets/
 Assets/_Complete-Game/
 Assets/TutorialInfo/
+
+# Assets_DLs
+Assets/3Skyboxes
+Assets/3Skyboxes2
+Assets/Asteroids
+Assets/SF_Fighter
+Assets/SimpleParticlePack
